# flight-price-prediction

./: .env  .gitignore  Dockerfile  Makefile  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
auth/: app.py  config.py  jwt.py  main.py
auth/models/: auth.py  flight_record.py
auth/routes/: auth.py  booking.py  datasets.py  flight.py  mail.py  register.py  user.py
auth/service/: get_booking_details.py  predict_price.py
auth/util/: current_user.py  mail.py  password.py
dump/flight_price_predictor/: airlines.bson  airlines.metadata.json  destinations.bson  destinations.metadata.json  sources.bson  sources.metadata.json
ml/: flight_price_check.ipynb  run_model.py  train_prediction.py
