[tool.poetry]
name = "fastapi-beanie-jwt-main"
version = "0.1.0"
description = ""
authors = ["bhuwan <ricky.pantha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bcrypt = "^4.2.0"
fastapi = {extras = ["mail"], version = "^0.115.4"}
beanie = "^1.27.0"
uvicorn = "^0.32.0"
python-decouple = "^3.8"
pydantic = {extras = ["email"], version = "^2.9.2"}
fastapi-mail = "^1.4.1"
fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}
authlib = "^1.3.2"
pyjwt = "^2.9.0"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
